adding reranker, hybrid mode
